[package]
name = "rupy"
version = "0.1.0"
authors = ["Harrison Burt <57491488+ChillFish8@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rupy-parser = { version = "*", path = "./rupy-parser" }
rupy-ast = { version = "*", path = "./rupy-ast" }

hashbrown = "0.9.1"
rustc-hash = "1.1"
slab = "0.4"
bytes = "1"
num-bigint = "0.2.6"
num-traits = "0.2.14"
crossbeam = "0.8"
anyhow = "1"
luajit2-sys = "0.0.2"

[profile.release]
lto = "fat"
codegen-units = 1