[package]
name = "rupy-compiler"
version = "0.1.2"
description = "Compiler for python code into bytecode for the rustpython VM."
authors = ["RustPython Team"]
repository = "https://github.com/RustPython/RustPython"
license = "MIT"
edition = "2018"

[dependencies]
indexmap = "1.0"
itertools = "0.10.0"
rupy-bytecode = { path = "../rupy-bytecode", version = "0.1.2" }
rupy-ast = { path = "../rupy-ast" }
num-complex = { version = "0.4.0", features = ["serde"] }
num-traits = "0.2"
log = "0.4"
ahash = "0.7.2"

[dev-dependencies]
rupy-parser = { path = "../rupy-parser" }
insta = "1.7.0"
