[package]
name = "rupy-runtime"
version = "0.1.0"
authors = ["Harrison Burt <57491488+ChillFish8@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer = "1"
wasmer-engine-jit = "1"
wasmer-compiler-cranelift = "1"

anyhow = "1"
